--- a/trunk/MagicOfGathering/src/noorg/magic/controls/play/containers/GalleryContainer.mxml
+++ b/trunk/MagicOfGathering/src/noorg/magic/controls/play/containers/GalleryContainer.mxml
@@ -4,6 +4,6 @@
 	creationComplete="completeHandler()">
 	<mx:Script source="GalleryContainerAs.as" />
 	<mx:Image width="{Constants.PLAY_CARD_WIDTH}" height="{Constants.PLAY_CARD_HEIGHT}" buttonMode="true"
-		source="@Embed(source='noorg/magic/assets/cards/back.png')" verticalCenter="0" 
+		source="{AS.CardBack}" verticalCenter="0" 
 		click="backClickHandler()" />
 </mx:Canvas>
