--- a/trunk/MagicOfGathering/src/noorg/magic/controls/play/containers/GraveyardContainer.mxml
+++ b/trunk/MagicOfGathering/src/noorg/magic/controls/play/containers/GraveyardContainer.mxml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" 
-	width="{Constants.PLAY_CARD_WIDTH}" height="{Constants.PLAY_CARD_HEIGHT}"
+	width="{Constants.PLAY_CARD_WIDTH}" verticalScrollPolicy="off" horizontalScrollPolicy="off"
 	 creationComplete="completeHandler()">
 	<mx:Script source="GraveyardContainerAs.as" />
 	
 	<mx:Image id="mainImage" width="{Constants.PLAY_CARD_WIDTH}" height="{Constants.PLAY_CARD_HEIGHT}"
 		buttonMode="true" source="{_source}" doubleClickEnabled="true"
-		maintainAspectRatio="false"
-		doubleClick="imageDoubleClickHandler()"
-		dragEnter="imageDragEnterHandler(event)" dragDrop="imageDragDropHandler(event)"
-		verticalCenter="0" />
+		maintainAspectRatio="false" doubleClick="imageDoubleClickHandler()"
+		dragEnter="imageDragEnterHandler(event)" dragDrop="imageDragDropHandler(event)" />
 		
 </mx:Canvas>
