--- a/trunk/MagicOfGathering/src/noorg/magic/controls/play/PlayMainContainer.mxml
+++ b/trunk/MagicOfGathering/src/noorg/magic/controls/play/PlayMainContainer.mxml
@@ -1,7 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" width="100%" height="100%" 
-	verticalScrollPolicy="off" horizontalScrollPolicy="off" xmlns:components="org.hamster.components.*">
+	verticalScrollPolicy="off" horizontalScrollPolicy="off" 
+	xmlns:components="org.hamster.components.*" xmlns:buttons="noorg.magic.controls.play.buttons.*"
+	 creationComplete="completeHandler()" xmlns:play="noorg.magic.controls.play.*">
 	<mx:Script source="PlayMainContainerAs.as" />
-	<components:AdvancedViewStack id="mainViewStack" width="100%" height="100%">
-	</components:AdvancedViewStack>
+	<mx:ViewStack id="mainViewStack" width="100%" height="100%" >
+		<play:PlayMainView id="mainView" />
+		<play:PlayMainViewOpposite id="mainViewOpposite" />
+	</mx:ViewStack>
+	
+	<buttons:SwitchPlayerBtn id="switchPlayerBtnUp" isUpArrow="true" 
+		dragEnter="upDragEnterHandler(event)" dragDrop="upDragDropHandler(event)" />
+	<buttons:SwitchPlayerBtn id="switchPlayerBtnDown" isUpArrow="false" bottom="0"
+		dragEnter="downDragEnterHandler(event)" dragDrop="downDragDropHandler(event)" />
 </mx:Canvas>
