--- a/trunk/MagicOfGathering/src/noorg/magic/controls/play/containers/PlayCardListContainer.mxml
+++ b/trunk/MagicOfGathering/src/noorg/magic/controls/play/containers/PlayCardListContainer.mxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml"
+<mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" height="{Constants.PLAY_CARD_HEIGHT + 1}"
 	verticalScrollPolicy="off" horizontalScrollPolicy="off"
 	creationComplete="completeHandler()">
 	
