--- a/trunk/MagicOfGathering/src/noorg/magic/controls/popups/EnhancementPopup.mxml
+++ b/trunk/MagicOfGathering/src/noorg/magic/controls/popups/EnhancementPopup.mxml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" width="400" height="300">
+<mx:Panel xmlns:mx="http://www.adobe.com/2006/mxml" width="400" height="300" layout="vertical"
+	title="{this.resourceManager.getString('main','enhancementPopup.label')}"
+	creationComplete="completeHandler()">
 	<mx:Script source="EnhancementPopupAs.as" />
 	<mx:TileList id="mainContainer" dataProvider="{_cardColl}" width="100%" height="100%"
 		 itemRenderer="noorg.magic.controls.play.renderer.EnhancementCardRenderer" />
 	<mx:Button label="{this.resourceManager.getString('main','close')}" 
 		click="closeHandler()" />
-</mx:Canvas>
+</mx:Panel>
