--- a/trunk/MagicOfGathering/src/noorg/magic/controls/unit/types/items/TypeInstantEditor.mxml
+++ b/trunk/MagicOfGathering/src/noorg/magic/controls/unit/types/items/TypeInstantEditor.mxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" width="400" height="300"
+<mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" width="100%" height="100"
 	implements="noorg.magic.controls.unit.types.ITypeEditor">
 	<mx:Script source="TypeInstantEditorAs.as" />
 </mx:Canvas>
