--- a/trunk/MagicOfGathering/src/MagicOfGathering.mxml
+++ b/trunk/MagicOfGathering/src/MagicOfGathering.mxml
@@ -2,7 +2,7 @@
 <mx:WindowedApplication xmlns:mx="http://www.adobe.com/2006/mxml" layout="absolute" minWidth="800" minHeight="600" width="800" height="600" backgroundColor="white"
  	initialize="init()" applicationComplete="appCompleteHandler()" 
  	xmlns:controls="noorg.magic.controls.*"
- 	xmlns:ns1="org.hamster.components.chrometab.*" xmlns:icons="noorg.magic.controls.icons.*" xmlns:tips="noorg.magic.controls.popups.tips.*">
+ 	xmlns:ns1="org.hamster.components.chrometab.*" xmlns:icons="noorg.magic.controls.icons.*" xmlns:tips="noorg.magic.controls.popups.tips.*" xmlns:masks="noorg.magic.controls.masks.*">
 	<mx:Script source="MagicOfGatheringAs.as" />
 	<mx:Script>
 		<![CDATA[
@@ -22,4 +22,7 @@
 	
 	<!-- Tips which should not be popup by PopupManager -->
 	<tips:CardDetailTip id="cardDetailTip" />
+	
+	<!-- animation layer -->
+	<masks:AnimationMask id="animationMask" width="100%" height="100%" />
 </mx:WindowedApplication>
